Add llvm to the build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,24 +7,39 @@ configure_file(
   "${PROJECT_SOURCE_DIR}/include/fahrenheit/version.h.in"
   "${PROJECT_BINARY_DIR}/include/fahrenheit/version.h")
 
-add_definitions(
-  -std=c89
-  -Wall
-  -Wextra
-  -Werror
-  -Wundef
-  -Wshadow
-  -Wcast-align
-  -Wstrict-prototypes
-  -Wmissing-prototypes
-  -pedantic)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
+  -std=c++11 \
+  -Wall \
+  -Werror \
+  -Wundef \
+  -pedantic")
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} \
+  -std=c89 \
+  -Wall \
+  -Wextra \
+  -Werror \
+  -Wundef \
+  -Wshadow \
+  -Wcast-align \
+  -Wstrict-prototypes \
+  -Wmissing-prototypes \
+  -pedantic")
 
 add_library(fahrenheit
-  src/backend_llvm.c
+  src/backend_llvm.cpp
   src/ir.c
   src/verify.c)
 
 # dependencies
+find_package(LLVM REQUIRED CONFIG)
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+include_directories(${LLVM_INCLUDE_DIRS})
+llvm_map_components_to_libnames(llvm_libs core analysis mcjit)
+target_link_libraries(fahrenheit ${llvm_libs})
+
+# submodules
 add_subdirectory(ext/stdplus)
 target_link_libraries(fahrenheit stdplus)
 
