--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 dist: trusty
 language: c
 compiler: gcc
+
 addons:
   apt:
     packages:
       - cmake
-      - llvm-3.9
+      - llvm-3.9-dev
+
 script:
   - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_FAHRENHEIT_TESTS=1 .
   - make 
