--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
   -std=c++11 \
   -Wall \
   -Werror \
-  -Wundef \
-  -pedantic")
+  -Wundef")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} \
   -std=c89 \
