--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: trusty
 language: c
 compiler: gcc
 
@@ -12,3 +11,7 @@ script:
   - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_FAHRENHEIT_TESTS=1 .
   - make 
   - make test
+
+notifications:
+  email: false
+
