Attempt to fix travis-ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ addons:
   apt:
     packages:
       - cmake
-      - llvm-4.0-dev
+      - llvm-3.8-dev
 
 script:
-  - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_FAHRENHEIT_TESTS=1 .
+  - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_FAHRENHEIT_TESTS=1 \
+    -DLLVM_DIR=/usr/share/llvm-3.8/cmake .
   - make 
   - make test
 
