--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,13 @@ addons:
       - cmake
 
 before_install:
-  - cd ~
   - wget http://releases.llvm.org/3.9.1/clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
   - unxz clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
   - tar xfv clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar
 
 script:
   - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_FAHRENHEIT_TESTS=1 \
-    -DLLVM_DIR=~/clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04/lib/cmake/llvm .
+    -DLLVM_DIR=clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04/lib/cmake/llvm .
   - make 
   - make test
 
