--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
   apt:
     packages:
       - cmake
-      - lua5.3
+      - lua
 
 before_install:
   - wget http://releases.llvm.org/3.9.1/clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
