Implement load instruction and printer module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,28 +7,11 @@ configure_file(
   "${PROJECT_SOURCE_DIR}/include/fahrenheit/version.h.in"
   "${PROJECT_BINARY_DIR}/include/fahrenheit/version.h")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
-  -std=c++11 \
-  -Wall \
-  -Werror \
-  -Wundef")
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} \
-  -std=c89 \
-  -Wall \
-  -Wextra \
-  -Werror \
-  -Wundef \
-  -Wshadow \
-  -Wcast-align \
-  -Wstrict-prototypes \
-  -Wmissing-prototypes \
-  -pedantic")
-
 add_library(fahrenheit
   src/backend_llvm.cpp
   src/instructions.c
   src/ir.c
+  src/printer.c
   src/verify.c)
 
 # dependencies
@@ -57,8 +40,27 @@ add_custom_target(doc
     COMMENT "Generating API documentation with Doxygen" VERBATIM
 )
 
-if(ENABLE_FAHRENHEIT_TESTS)
+if(FAHRENHEIT_DEV)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
+    -std=c++11 \
+    -Wall \
+    -Werror \
+    -Wshadow \
+    -Wundef")
+  
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} \
+    -std=c89 \
+    -Wall \
+    -Wextra \
+    -Werror \
+    -Wundef \
+    -Wshadow \
+    -Wcast-align \
+    -Wstrict-prototypes \
+    -Wmissing-prototypes \
+    -pedantic")
+
   enable_testing()
   add_subdirectory(tests)
-endif(ENABLE_FAHRENHEIT_TESTS)
+endif(FAHRENHEIT_DEV)
 
