--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,18 +27,30 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} \
 enable_testing()
 
 # Create a test case given a generator
-macro(fahrenheit_test testname)
-  set(generator ${CMAKE_CURRENT_SOURCE_DIR}/${testname}.lua)
-  set(testsrc ${CMAKE_CURRENT_BINARY_DIR}/${testname}.c)
-  set(testbin ${testname})
+macro(fahrenheit_test name)
+  set(gen ${CMAKE_CURRENT_SOURCE_DIR}/${name}.lua)
+  set(exp ${CMAKE_CURRENT_SOURCE_DIR}/${name}.exp)
+  set(src ${CMAKE_CURRENT_BINARY_DIR}/${name}.c)
+  set(out ${name}.out)
+  set(bin ${name})
+
   add_custom_command(
-    OUTPUT ${testsrc}
-    COMMAND lua ${generator} > ${testsrc}
+    OUTPUT ${src}
+    COMMAND lua ${gen} > ${src}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    DEPENDS ${generator} ${CMAKE_CURRENT_SOURCE_DIR}/test.lua)
-  add_executable(${testbin} ${testsrc})
-  target_link_libraries(${testbin} fahrenheit)
-  add_test(${testname} ${testbin})
+    DEPENDS ${gen} ${CMAKE_CURRENT_SOURCE_DIR}/test.lua)
+
+  add_executable(${bin} ${src})
+  target_link_libraries(${bin} fahrenheit)
+
+  add_custom_target(
+    ${out} ALL
+    COMMAND ./${bin} > ${out}
+    DEPENDS ${bin})
+
+  add_test(
+    NAME ${name}
+    COMMAND ${CMAKE_COMMAND} -E compare_files ${exp} ${out})
 endmacro(fahrenheit_test)
 
 # Test cases
